-- Esquema PostgreSQL para Sistema PQRS SuperMarket
-- Ejecutar este script despuÃ©s de crear y seleccionar la base de datos pqrs_supermarket.
-- Ejecutar una sola vez para crear la base de datos
-- CREATE DATABASE pqrs_supermarket;

CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TABLE perfil (
    id_perfil BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) NOT NULL UNIQUE,
    descripcion VARCHAR(200),
    activo BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE usuario (
    id_usuario BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(80) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    correo VARCHAR(120) NOT NULL UNIQUE,
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    id_perfil BIGINT NOT NULL,
    CONSTRAINT fk_usuario_perfil
        FOREIGN KEY (id_perfil) REFERENCES perfil (id_perfil)
);

CREATE TABLE tipo_identificacion (
    id_tipo_identificacion BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) NOT NULL UNIQUE,
    abreviatura VARCHAR(10)
);

CREATE TABLE cliente (
    id_cliente BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_tipo_identificacion BIGINT NOT NULL,
    numero_identificacion VARCHAR(30) NOT NULL UNIQUE,
    nombres_completos VARCHAR(150) NOT NULL,
    correo VARCHAR(120) NOT NULL UNIQUE,
    telefono_movil VARCHAR(20),
    id_usuario BIGINT NOT NULL UNIQUE,
    fecha_registro TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT fk_cliente_tipo_identificacion
        FOREIGN KEY (id_tipo_identificacion) REFERENCES tipo_identificacion (id_tipo_identificacion),
    CONSTRAINT fk_cliente_usuario
        FOREIGN KEY (id_usuario) REFERENCES usuario (id_usuario)
);

CREATE TABLE gestor (
    id_gestor BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombres_completos VARCHAR(150) NOT NULL,
    correo VARCHAR(120) NOT NULL UNIQUE,
    id_usuario BIGINT NOT NULL UNIQUE,
    fecha_registro TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT fk_gestor_usuario
        FOREIGN KEY (id_usuario) REFERENCES usuario (id_usuario)
);

CREATE TABLE tipo_radicado (
    id_tipo_radicado BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) NOT NULL UNIQUE,
    descripcion VARCHAR(200)
);

CREATE TABLE estado_pqrs (
    id_estado_pqrs BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(30) NOT NULL UNIQUE,
    orden INT,
    activo BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE pqrs (
    id_pqrs BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    numero_radicado VARCHAR(30) NOT NULL UNIQUE,
    fecha_radicado TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    comentarios TEXT NOT NULL,
    justificacion_estado TEXT,
    id_cliente BIGINT NOT NULL,
    id_tipo_radicado BIGINT NOT NULL,
    id_estado_actual BIGINT NOT NULL,
    id_usuario_crea BIGINT,
    fecha_actualizacion TIMESTAMPTZ,
    CONSTRAINT fk_pqrs_cliente
        FOREIGN KEY (id_cliente) REFERENCES cliente (id_cliente),
    CONSTRAINT fk_pqrs_tipo_radicado
        FOREIGN KEY (id_tipo_radicado) REFERENCES tipo_radicado (id_tipo_radicado),
    CONSTRAINT fk_pqrs_estado_actual
        FOREIGN KEY (id_estado_actual) REFERENCES estado_pqrs (id_estado_pqrs),
    CONSTRAINT fk_pqrs_usuario_crea
        FOREIGN KEY (id_usuario_crea) REFERENCES usuario (id_usuario)
);

CREATE TABLE pqrs_anexo (
    id_anexo BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_pqrs BIGINT NOT NULL UNIQUE,
    nombre_archivo VARCHAR(200) NOT NULL,
    ruta_archivo VARCHAR(500) NOT NULL,
    mime_type VARCHAR(100),
    tamano_bytes BIGINT,
    fecha_carga TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT fk_anexo_pqrs
        FOREIGN KEY (id_pqrs) REFERENCES pqrs (id_pqrs) ON DELETE CASCADE
);

CREATE TABLE pqrs_historial_estado (
    id_historial BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_pqrs BIGINT NOT NULL,
    id_estado_pqrs BIGINT NOT NULL,
    justificacion TEXT NOT NULL,
    id_usuario BIGINT NOT NULL,
    fecha_cambio TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT fk_historial_pqrs
        FOREIGN KEY (id_pqrs) REFERENCES pqrs (id_pqrs) ON DELETE CASCADE,
    CONSTRAINT fk_historial_estado
        FOREIGN KEY (id_estado_pqrs) REFERENCES estado_pqrs (id_estado_pqrs),
    CONSTRAINT fk_historial_usuario
        FOREIGN KEY (id_usuario) REFERENCES usuario (id_usuario)
);

CREATE TABLE permiso (
    id_permiso BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(80) NOT NULL UNIQUE,
    descripcion VARCHAR(200),
    activo BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE opcion (
    id_opcion BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL UNIQUE,
    ruta VARCHAR(200),
    icono VARCHAR(80),
    activo BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE perfil_permiso (
    id_perfil BIGINT NOT NULL,
    id_permiso BIGINT NOT NULL,
    PRIMARY KEY (id_perfil, id_permiso),
    CONSTRAINT fk_perfil_permiso_perfil
        FOREIGN KEY (id_perfil) REFERENCES perfil (id_perfil) ON DELETE CASCADE,
    CONSTRAINT fk_perfil_permiso_permiso
        FOREIGN KEY (id_permiso) REFERENCES permiso (id_permiso) ON DELETE CASCADE
);

CREATE TABLE perfil_opcion (
    id_perfil BIGINT NOT NULL,
    id_opcion BIGINT NOT NULL,
    PRIMARY KEY (id_perfil, id_opcion),
    CONSTRAINT fk_perfil_opcion_perfil
        FOREIGN KEY (id_perfil) REFERENCES perfil (id_perfil) ON DELETE CASCADE,
    CONSTRAINT fk_perfil_opcion_opcion
        FOREIGN KEY (id_opcion) REFERENCES opcion (id_opcion) ON DELETE CASCADE
);

CREATE INDEX idx_pqrs_cliente ON pqrs (id_cliente);
CREATE INDEX idx_pqrs_estado ON pqrs (id_estado_actual);
CREATE INDEX idx_pqrs_tipo ON pqrs (id_tipo_radicado);
CREATE INDEX idx_historial_pqrs ON pqrs_historial_estado (id_pqrs);
CREATE INDEX idx_historial_fecha ON pqrs_historial_estado (fecha_cambio);

-- Datos base mÃ­nimos
INSERT INTO perfil (nombre, descripcion) VALUES
('CLIENTE', 'Usuario que radica y consulta sus PQRS'),
('GESTOR', 'Usuario encargado de gestionar PQRS'),
('ADMIN', 'Usuario administrador del sistema');

INSERT INTO tipo_identificacion (nombre, abreviatura) VALUES
('Cédula de ciudadanía', 'CC'),
('Tarjeta de identidad', 'TI'),
('Cédula de extranjería', 'CE'),
('Pasaporte', 'PA'),
('NIT', 'NIT');

INSERT INTO tipo_radicado (nombre, descripcion) VALUES
('Petición', 'Solicitud formal de información o servicio'),
('Queja', 'Inconformidad con el trato o servicio recibido'),
('Reclamo', 'Inconformidad relacionada con los productos o servicios'),
('Sugerencia', 'Recomendación para mejorar el servicio');

INSERT INTO estado_pqrs (nombre, orden, activo) VALUES
('Nuevo', 1, TRUE),
('En proceso', 2, TRUE),
('Resuelto', 3, TRUE),
('Rechazado', 4, TRUE);

INSERT INTO permiso (nombre, descripcion) VALUES
('CREAR', 'Crear registros'),
('CONSULTAR', 'Consultar registros'),
('EDITAR', 'Editar registros'),
('ELIMINAR', 'Eliminar registros'),
('DESCARGAR', 'Descargar anexos'),
('REPORTAR', 'Generar reportes');

INSERT INTO opcion (nombre, ruta, icono) VALUES
('Radicar PQRS', '/pqrs/radicar', 'file-plus'),
('Consultar Radicados Cliente', '/pqrs/mis-radicados', 'search'),
('Consultar Radicados', '/gestor/radicados', 'list'),
('Descargar Anexo', '/gestor/anexos', 'download'),
('Generar Reporte PDF', '/gestor/reporte', 'file-text'),
('Cambiar Estado PQRS', '/gestor/estado', 'refresh-cw'),
('Administrar Usuarios', '/admin/usuarios', 'users');

-- AsignaciÃ³n bÃ¡sica de permisos a perfiles
INSERT INTO perfil_permiso (id_perfil, id_permiso)
SELECT p.id_perfil, pe.id_permiso
FROM perfil p
JOIN permiso pe ON (
    (p.nombre = 'CLIENTE' AND pe.nombre IN ('CREAR', 'CONSULTAR')) OR
    (p.nombre = 'GESTOR' AND pe.nombre IN ('CONSULTAR', 'DESCARGAR', 'REPORTAR', 'EDITAR')) OR
    (p.nombre = 'ADMIN' AND pe.nombre IN ('CREAR', 'CONSULTAR', 'EDITAR', 'ELIMINAR', 'DESCARGAR', 'REPORTAR'))
);

-- AsignaciÃ³n bÃ¡sica de opciones a perfiles
INSERT INTO perfil_opcion (id_perfil, id_opcion)
SELECT p.id_perfil, o.id_opcion
FROM perfil p
JOIN opcion o ON (
    (p.nombre = 'CLIENTE' AND o.nombre IN ('Radicar PQRS', 'Consultar Radicados Cliente')) OR
    (p.nombre = 'GESTOR' AND o.nombre IN ('Consultar Radicados', 'Descargar Anexo', 'Generar Reporte PDF', 'Cambiar Estado PQRS')) OR
    (p.nombre = 'ADMIN' AND o.nombre IN ('Administrar Usuarios', 'Consultar Radicados', 'Generar Reporte PDF'))
);

-- Base para contraseÃ±a cifrada:
-- En la aplicaciÃ³n se debe guardar password_hash con bcrypt/argon2, no texto plano.

