// Modelo ER para dbdiagram.io - Sistema PQRS SuperMarket

Table perfil {
  id_perfil int [pk, increment]
  nombre varchar(50) [not null, unique] // CLIENTE, GESTOR, ADMIN
  descripcion varchar(200)
  activo boolean [not null, default: true]
}

Table usuario {
  id_usuario int [pk, increment]
  username varchar(80) [not null, unique]
  password_hash varchar(255) [not null]
  correo varchar(120) [not null, unique]
  activo boolean [not null, default: true]
  fecha_creacion timestamp [not null, default: `now()`]
  id_perfil int [not null]
}

Table tipo_identificacion {
  id_tipo_identificacion int [pk, increment]
  nombre varchar(50) [not null, unique]
  abreviatura varchar(10)
}

Table cliente {
  id_cliente int [pk, increment]
  id_tipo_identificacion int [not null]
  numero_identificacion varchar(30) [not null, unique]
  nombres_completos varchar(150) [not null]
  correo varchar(120) [not null, unique]
  telefono_movil varchar(20)
  id_usuario int [not null, unique]
  fecha_registro timestamp [not null, default: `now()`]
}

Table gestor {
  id_gestor int [pk, increment]
  nombres_completos varchar(150) [not null]
  correo varchar(120) [not null, unique]
  id_usuario int [not null, unique]
  fecha_registro timestamp [not null, default: `now()`]
}

Table tipo_radicado {
  id_tipo_radicado int [pk, increment]
  nombre varchar(50) [not null, unique] // PQRS, Petición, Queja, Reclamo, Sugerencia
  descripcion varchar(200)
}

Table estado_pqrs {
  id_estado_pqrs int [pk, increment]
  nombre varchar(30) [not null, unique] // Nuevo, En proceso, Resuelto, Rechazado
  orden int
  activo boolean [not null, default: true]
}

Table pqrs {
  id_pqrs int [pk, increment]
  numero_radicado varchar(30) [not null, unique]
  fecha_radicado timestamp [not null, default: `now()`]
  comentarios text [not null]
  justificacion_estado text
  id_cliente int [not null]
  id_tipo_radicado int [not null]
  id_estado_actual int [not null]
  id_usuario_crea int
  fecha_actualizacion timestamp
}

Table pqrs_anexo {
  id_anexo int [pk, increment]
  id_pqrs int [not null, unique]
  nombre_archivo varchar(200) [not null]
  ruta_archivo varchar(500) [not null]
  mime_type varchar(100)
  tamano_bytes bigint
  fecha_carga timestamp [not null, default: `now()`]
}

Table pqrs_historial_estado {
  id_historial int [pk, increment]
  id_pqrs int [not null]
  id_estado_pqrs int [not null]
  justificacion text [not null]
  id_usuario int [not null]
  fecha_cambio timestamp [not null, default: `now()`]
}

Table permiso {
  id_permiso int [pk, increment]
  nombre varchar(80) [not null, unique] // CREAR, CONSULTAR, EDITAR, ELIMINAR, DESCARGAR, REPORTAR
  descripcion varchar(200)
  activo boolean [not null, default: true]
}

Table opcion {
  id_opcion int [pk, increment]
  nombre varchar(100) [not null, unique] // Menú o funcionalidad
  ruta varchar(200)
  icono varchar(80)
  activo boolean [not null, default: true]
}

Table perfil_permiso {
  id_perfil int [not null]
  id_permiso int [not null]

  indexes {
    (id_perfil, id_permiso) [pk]
  }
}

Table perfil_opcion {
  id_perfil int [not null]
  id_opcion int [not null]

  indexes {
    (id_perfil, id_opcion) [pk]
  }
}

Ref: usuario.id_perfil > perfil.id_perfil
Ref: cliente.id_tipo_identificacion > tipo_identificacion.id_tipo_identificacion
Ref: cliente.id_usuario > usuario.id_usuario
Ref: gestor.id_usuario > usuario.id_usuario
Ref: pqrs.id_cliente > cliente.id_cliente
Ref: pqrs.id_tipo_radicado > tipo_radicado.id_tipo_radicado
Ref: pqrs.id_estado_actual > estado_pqrs.id_estado_pqrs
Ref: pqrs.id_usuario_crea > usuario.id_usuario
Ref: pqrs_anexo.id_pqrs > pqrs.id_pqrs
Ref: pqrs_historial_estado.id_pqrs > pqrs.id_pqrs
Ref: pqrs_historial_estado.id_estado_pqrs > estado_pqrs.id_estado_pqrs
Ref: pqrs_historial_estado.id_usuario > usuario.id_usuario
Ref: perfil_permiso.id_perfil > perfil.id_perfil
Ref: perfil_permiso.id_permiso > permiso.id_permiso
Ref: perfil_opcion.id_perfil > perfil.id_perfil
Ref: perfil_opcion.id_opcion > opcion.id_opcion
